--- a/templates/emptyDirAndFileInRoot/template.yaml
+++ b/templates/emptyDirAndFileInRoot/template.yaml
@@ -8,19 +8,16 @@ spec:
   type: documentation
 
   parameters:
-    - title: Fill in some steps
+    - title: Provide information
       required:
         - name
       properties:
         name:
           title: Name
           type: string
-          description: Unique name of the component
-          ui:field: EntityNamePicker
-          ui:autofocus: true
         myCondition:
           title: My condition
-          type: boolean    
+          type: boolean
 
   steps:
     - id: fetch
