--- a/templates/issueWithEmptyDirs/template.yaml
+++ b/templates/issueWithEmptyDirs/template.yaml
@@ -8,16 +8,13 @@ spec:
   type: documentation
 
   parameters:
-    - title: Fill in some steps
+    - title: Provide information
       required:
         - name
       properties:
         name:
           title: Name
           type: string
-          description: Unique name of the component
-          ui:field: EntityNamePicker
-          ui:autofocus: true
         myCondition:
           title: My condition
           type: boolean    
