--- a/templates/issueWithEmptyDirs/template.yaml
+++ b/templates/issueWithEmptyDirs/template.yaml
@@ -28,3 +28,8 @@ spec:
         values:
           name: ${{ parameters.name }}
           myCondition: ${{ parameters.myCondition }}
+    - id: debug
+      name: Debug
+      action: debug:log
+      input:
+        listWorkspace: true
